gitops_archive/manifests/blazork8s/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blazork8s
---
apiVersion: v1
kind: Service
metadata:
  name: blazork8s
  namespace: blazork8s
  labels:
    app: blazork8s
spec:
  ports:
    - name: http-blazork8s
      protocol: TCP
      port: 4000
      targetPort: 8080
  selector:
    app: blazork8s
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blazork8s
  namespace: blazork8s
  labels:
    app: blazork8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blazork8s
  template:
    metadata:
      labels:
        app: blazork8s
    spec:
      containers:
        - name: blazork8s
          image: ghcr.io/weibaohui/blazork8s:0.2.7
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http-blazork8s
          imagePullPolicy: Always
          volumeMounts:
            - name: appsettings-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
      volumes:
        - name: appsettings-volume
          configMap:
            name: blazork8s-appsettings
      restartPolicy: Always
      serviceAccountName: blazork8s
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blazerk8s-ingress
  namespace: blazork8s
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blazerk8s.local.timmybtech.com`)
      kind: Rule
      services:
        - name: webserver
          port: 8080
  tls:
    secretName: local-timmybtech-com-tls
